# mental-health

./: .gitignore  app.py  config.py  data_process.py  demo.py  pyproject.toml
app/: __init__.py  extensions.py
app/api/: __init__.py
app/templates/: index.html
data/: dataset.json
ml/: __init__.py  constants.py  instances.py  utils.py
templates/: index.html
utils/: abs.py
