[tool.poetry]
name = "mental-health"
version = "0.1.0"
description = "Mental Health GPT"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.1"
transformers = "4.40.0"
accelerate = "^0.29.3"
datasets = "^2.19.0"
evaluate = "^0.4.1"
pytest = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
